--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,15 +31,12 @@ summary: >
   automatic partitioning with Redis Cluster.
 
   This charm supports Redis 6 in Kubernetes environments, using k8s services
-  for load balancing.
+  for load balancing. This charm does not support Redis clustering capabilities.
 maintainers:
   - Redis Charm Maintainers <redis-charmers@lists.launchpad.net>
 min-juju-version: 2.8.7
 series:
   - kubernetes
-provides:
-  db:
-    interface: redis
 deployment:
   min-version: '1.16'
   type: stateful
