--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,7 +33,7 @@ summary: >
   This charm supports Redis 6 in Kubernetes environments, using k8s services
   for load balancing. This charm does not support Redis clustering capabilities.
 maintainers:
-  - Redis Charm Maintainers <redis-charmers@lists.launchpad.net>
+  - Eduardo Mucelli R. Oliveira <eduardo.mucelli@canonical.com>
 min-juju-version: 2.8.7
 series:
   - kubernetes
