--- a/metadata.yaml
+++ b/metadata.yaml
@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-name: redis
+name: redis-k8s
 display-name: Redis
 description: >
   Redis charm for Kubernetes deployments.
