Create and use a library for the redis relation

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -45,7 +45,7 @@ deployment:
   type: stateful
   service: loadbalancer
 provides:
-  datastore:
+  redis:
     interface: redis
 storage:
   database:
