--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,20 +37,18 @@ summary: >
   units are allowed, replication and clustering are not supported for the moment.
 maintainers:
   - Eduardo Mucelli R. Oliveira <eduardo.mucelli@canonical.com>
-min-juju-version: 2.8.7
-series:
-  - kubernetes
-deployment:
-  min-version: '1.16'
-  type: stateful
-  service: loadbalancer
 provides:
   redis:
     interface: redis
 storage:
   database:
     type: filesystem
-    location: /var/opt/redis
+containers:
+  redis:
+    resource: redis-image
+    mounts:
+      - storage: database
+        location: /var/lib/redis
 resources:
   redis-image:
     type: oci-image
