--- a/actions.yaml
+++ b/actions.yaml
@@ -11,7 +11,7 @@
 # PURPOSE.  See the GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with this program. If not, see <http://www.gnu.org/licenses/>.
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-ops~=1.2.0
-redis~=3.5.3
+check-service:
+  description: Check if the redis service is up
