--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,7 +15,7 @@
 
 name: redis-k8s
 display-name: Redis
-docs: https://discourse.charmhub.io/t/4571
+docs: https://discourse.charmhub.io/t/redis-docs-index/4571
 description: >
   Redis charm for Kubernetes deployments.
 tags:
