--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,7 +32,7 @@ summary: >
   of on-disk persistence, and provides high availability via Redis Sentinel and
   automatic partitioning with Redis Cluster.
 
-  This charm supports Redis 5 in Kubernetes environments, using k8s services
+  This charm supports Redis in Kubernetes environments, using k8s services
   for load balancing. This supports a simple Redis topology. Although multiple
   units are allowed, replication and clustering are not supported for the moment.
 maintainers:
