--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,27 +20,24 @@ summary: >
   of on-disk persistence, and provides high availability via Redis Sentinel and
   automatic partitioning with Redis Cluster.
 
-  This charm supports Redis 5 in Kubernetes environments, using k8s services
+  This charm supports Redis in Kubernetes environments, using k8s services
   for load balancing. This supports a simple Redis topology. Although multiple
   units are allowed, replication and clustering are not supported for the moment.
 maintainers:
   - Eduardo Mucelli R. Oliveira <eduardo.mucelli@canonical.com>
-min-juju-version: 2.8.7
-series:
-  - kubernetes
-deployment:
-  min-version: '1.16'
-  type: stateful
-  service: loadbalancer
 provides:
   redis:
     interface: redis
 storage:
   database:
     type: filesystem
-    location: /var/opt/redis
+containers:
+  redis:
+    resource: redis-image
+    mounts:
+      - storage: database
+        location: /var/lib/redis
 resources:
   redis-image:
     type: oci-image
     description: ubuntu lts docker image for redis
-    upstream-source: 'ubuntu/redis'
