Tests and CI update (#17)
Update project following operator template

Add basic integration tests

Update docstrings

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,16 @@
-# Copyright 2022 Canonical Ltd.
+# Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
 
 [tox]
-skipsdist = True
+skipsdist=True
 skip_missing_interpreters = True
 envlist = lint, unit
 
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-lib_path = {toxinidir}/lib/
-all_path = {[vars]src_path} {[vars]tst_path}
+lib_path = {toxinidir}/lib/charms/redis_k8s
+all_path = {[vars]src_path} {[vars]tst_path} 
 
 [testenv]
 setenv =
@@ -50,12 +50,9 @@ commands =
       --skip {toxinidir}/build --skip {toxinidir}/lib --skip {toxinidir}/venv \
       --skip {toxinidir}/.mypy_cache --skip {toxinidir}/icon.svg
     # pflake8 wrapper supports config from pyproject.toml
-
-    flake8 {[vars]all_path}
-    # TODO
-    # pflake8 {[vars]all_path}
-    # black --check --diff {[vars]all_path}
-    # isort --check-only --diff {[vars]all_path}
+    pflake8 {[vars]all_path}
+    isort --check-only --diff {[vars]all_path}
+    black --check --diff {[vars]all_path}
 
 [testenv:unit]
 description = Run unit tests
