DPE-116 Add initial admin password (#20)
* refactor charm and add peer relation basics

* update and fix unit tests

* add default admin password

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,3 +42,7 @@ resources:
     type: oci-image
     description: ubuntu lts docker image for redis
     upstream: ubuntu/redis
+
+peers:
+  redis-peers:
+    interface: redis-peers
