add get_initial_admin_password action

--- a/actions.yaml
+++ b/actions.yaml
@@ -15,3 +15,6 @@
 
 check-service:
   description: Check if the redis service is up
+
+get-initial-admin-password:
+  description: Returns the randomly generated password at charm deployment
