--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,18 +37,18 @@ summary: >
   units are allowed, replication and clustering are not supported for the moment.
 maintainers:
   - Eduardo Mucelli R. Oliveira <eduardo.mucelli@canonical.com>
+
 provides:
   redis:
     interface: redis
-storage:
-  database:
-    type: filesystem
+
 containers:
   redis:
     resource: redis-image
     mounts:
       - storage: database
         location: /var/lib/redis
+
 resources:
   redis-image:
     type: oci-image
@@ -63,6 +63,12 @@ resources:
   ca-cert-file:
     type: file
     filename: ca.crt
+
+storage:
+  database:
+    type: filesystem
+    location: /var/lib/redis
+
 peers:
   redis-peers:
     interface: redis-peers
