--- a/tox.ini
+++ b/tox.ini
@@ -1,31 +1,79 @@
-[flake8]
-exclude =
-    .git,
-    __pycache__,
-    .tox,
-    .tox_env
+# Copyright 2022 Canonical Ltd.
+# See LICENSE file for licensing details.
 
 [tox]
-envlist = lint, unit
 skipsdist = True
+skip_missing_interpreters = True
+envlist = lint, unit
+
+[vars]
+src_path = {toxinidir}/src/
+tst_path = {toxinidir}/tests/
+lib_path = {toxinidir}/lib/
+all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
-
-
-[testenv:unit]
 setenv =
-    PYTHONPATH={toxinidir}/lib:{toxinidir}/src:$PYTHONPATH
+  PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
+  PYTHONBREAKPOINT=ipdb.set_trace
+  PY_COLORS=1
+passenv =
+  PYTHONPATH
+  CHARM_BUILD_DIR
+  MODEL_SETTINGS
 
+[testenv:fmt]
+description = Apply coding style standards to code
 deps =
-    -r {toxinidir}/requirements-dev.txt
-
+    black
+    isort
 commands =
-    coverage run -m pytest {toxinidir}/tests
-    coverage report -m
+    isort {[vars]all_path}
+    black {[vars]all_path}
 
 [testenv:lint]
+description = Check code against coding style standards
 deps =
+    black
     flake8
-
+    flake8-docstrings
+    flake8-copyright
+    flake8-builtins
+    pyproject-flake8
+    pep8-naming
+    isort
+    codespell
 commands =
-    flake8 {toxinidir}/src {toxinidir}/tests
+    # uncomment the following line if this charm owns a lib
+    codespell {[vars]lib_path}
+    codespell {toxinidir}/. --skip {toxinidir}/.git --skip {toxinidir}/.tox \
+      --skip {toxinidir}/build --skip {toxinidir}/lib --skip {toxinidir}/venv \
+      --skip {toxinidir}/.mypy_cache --skip {toxinidir}/icon.svg
+    # pflake8 wrapper supports config from pyproject.toml
+
+    flake8 {[vars]all_path}
+    # TODO
+    # pflake8 {[vars]all_path}
+    # black --check --diff {[vars]all_path}
+    # isort --check-only --diff {[vars]all_path}
+
+[testenv:unit]
+description = Run unit tests
+deps =
+    pytest
+    coverage[toml]
+    -r{toxinidir}/requirements.txt
+commands =
+    coverage run --source={[vars]src_path} \
+        -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
+    coverage report
+
+[testenv:integration]
+description = Run integration tests
+deps =
+    pytest
+    juju
+    pytest-operator
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
