add integration test and fix tls in charm

--- a/tox.ini
+++ b/tox.ini
@@ -73,4 +73,8 @@ deps =
     pytest-operator
     -r{toxinidir}/requirements.txt
 commands =
+    # Generate TLS certificates to use during tests
+    sh "./tests/gen-test-certs.sh"
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
+whitelist_externals =
+    sh
