--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,8 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     # Generate TLS certificates to use during tests
-    sh "./tests/gen-test-certs.sh"
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
+    sh -c "./tests/gen-test-certs.sh"
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
+    sh -c "rm -f tests/tls/*"
 whitelist_externals =
     sh
