--- a/tox.ini
+++ b/tox.ini
@@ -73,4 +73,9 @@ deps =
     pytest-operator
     -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
+    # Generate TLS certificates to use during tests
+    sh -c "./tests/gen-test-certs.sh"
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
+    sh -c "rm -f tests/tls/*"
+whitelist_externals =
+    sh
