--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,8 @@ containers:
     mounts:
       - storage: database
         location: /var/lib/redis
+  sentinel:
+    resource: redis-image
 
 resources:
   redis-image:
