--- a/actions.yaml
+++ b/actions.yaml
@@ -5,4 +5,7 @@ check-service:
   description: Check if the redis service is up
 
 get-initial-admin-password:
-  description: Returns the randomly generated password at charm deployment
+  description: Returns the randomly generated password for Redis at charm deployment
+
+get-sentinel-password:
+  description: Returns the randomly generated password for Sentinel at charm deployment
