DPE-485 Scale down (#39)
* add manual failover on departing master

* update config options for sentinel and redis-server

* improve error handling

Co-authored-by: Mykola Marzhan <303592+delgod@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # Copyright 2022 Canonical Ltd.
 # See LICENSE file for licensing details.
 
-ops~=1.4.0
+ops~=1.5.0
 redis~=3.5.3
 jinja2==3.1.1
+tenacity==8.0.1
