add integration tests for relations and rework helpers

--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,7 @@ deps =
     pytest
     juju
     pytest-operator
+    pytest-order
     -r{toxinidir}/requirements.txt
 commands =
     # Generate TLS certificates to use during tests
@@ -79,3 +80,14 @@ commands =
     sh -c "rm -f tests/tls/*"
 whitelist_externals =
     sh
+
+[testenv:integration-redis]
+description = Run integration tests
+deps =
+    pytest
+    juju
+    pytest-operator
+    pytest-order
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} -m "redis_tests" --durations=0
