--- a/tox.ini
+++ b/tox.ini
@@ -76,7 +76,7 @@ deps =
 commands =
     # Generate TLS certificates to use during tests
     sh -c "./tests/gen-test-certs.sh"
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 {[vars]tst_path}integration/test_charm.py
     sh -c "rm -f tests/tls/*"
 whitelist_externals =
     sh
