add discourse check

--- a/tox.ini
+++ b/tox.ini
@@ -81,7 +81,7 @@ commands =
 whitelist_externals =
     sh
 
-[testenv:integration-redis]
+[testenv:integration-relation]
 description = Run integration tests
 deps =
     pytest
