--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,7 @@ jobs:
           bootstrap-options: "--agent-version 2.9.29"
       - name: Run integration tests
         # set a predictable model name so it can be consumed by charm-logdump-action
-        run: tox -e integration-redis -- --model testing
+        run: tox -e integration-relation -- --model testing
       - name: Dump logs
         uses: canonical/charm-logdump-action@main
         if: failure()
