--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ commands =
 description = Check code against coding style standards
 deps =
     black
-    flake8
+    flake8==4.0.1
     flake8-docstrings
     flake8-copyright
     flake8-builtins
@@ -71,11 +71,23 @@ deps =
     pytest
     juju
     pytest-operator
+    pytest-order
     -r{toxinidir}/requirements.txt
 commands =
     # Generate TLS certificates to use during tests
     sh -c "./tests/gen-test-certs.sh"
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 {[vars]tst_path}integration/test_charm.py
     sh -c "rm -f tests/tls/*"
 whitelist_externals =
     sh
+
+[testenv:integration-relation]
+description = Run integration tests
+deps =
+    pytest
+    juju
+    pytest-operator
+    pytest-order
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} -m "redis_tests" --durations=0
