--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,8 +42,8 @@ jobs:
       - name: Run tests
         run: tox -e unit
 
-  integration-test:
-    name: Integration tests
+  integration-test-general:
+    name: Integration tests (general)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -52,8 +52,24 @@ jobs:
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
+          # This is needed until https://bugs.launchpad.net/juju/+bug/1977582 is fixed
+          bootstrap-options: "--agent-version 2.9.29"
       - name: Run integration tests
         run: tox -e integration
+  integration-test-relation:
+    name: Integration tests (relation)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup operator environment
+        uses: charmed-kubernetes/actions-operator@main
+        with:
+          provider: microk8s
+          # This is needed until https://bugs.launchpad.net/juju/+bug/1977582 is fixed
+          bootstrap-options: "--agent-version 2.9.29"
+      - name: Run integration tests
+        run: tox -e integration-relation
 
   release-to-charmhub:
     name: Release to CharmHub
@@ -61,7 +77,8 @@ jobs:
       - lib-check
       - lint
       - unit-test
-      - integration-test
+      - integration-test-general
+      - integration-test-relation
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
