fix juju version to avoid action errors

--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,8 @@ commands =
 description = Run integration tests
 deps =
     pytest
-    juju
+    # This is needed because of https://github.com/juju/python-libjuju/pull/698
+    juju==2.9.11
     pytest-operator
     pytest-order
     -r{toxinidir}/requirements.txt
