DPE-781 Run integration tests for passed lint/unit tests only
Avoid a long-running integration test in case of failing gatekeeping tests.
It will slightly increase the complete tests scope runtime
but will save (a lot?) of electricity/money for Canonical as often
new pull requests have some initial typos/issues to be polished.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,6 +44,9 @@ jobs:
 
   integration-test-general:
     name: Integration tests (general)
+    needs:
+      - lint
+      - unit-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -56,8 +59,12 @@ jobs:
           bootstrap-options: "--agent-version 2.9.29"
       - name: Run integration tests
         run: tox -e integration
+
   integration-test-relation:
     name: Integration tests (relation)
+    needs:
+      - lint
+      - unit-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
