add pod deletion tests

--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,7 @@ deps =
     juju==2.9.11
     pytest-operator
     pytest-order
+    lightkube==0.10.0
     -r{toxinidir}/requirements.txt
 commands =
     pytest -vv --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
@@ -83,6 +84,7 @@ deps =
     pytest
     juju
     pytest-operator
+    lightkube==0.10.0
     -r{toxinidir}/requirements.txt
 commands =
     pytest {[vars]tst_path}/integration/test_charm.py -vv --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
