--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,8 @@ provides:
     interface: redis
   metrics-endpoint:
     interface: prometheus_scrape
+  grafana-dashboard:
+    interface: grafana_dashboard
 
 containers:
   redis:
