--- a/tox.ini
+++ b/tox.ini
@@ -120,6 +120,7 @@ deps =
     # This is needed because of https://github.com/juju/python-libjuju/pull/698
     juju==2.9.11
     pytest-operator
+    lightkube==0.10.0
     -r{toxinidir}/requirements.txt
 commands =
     pytest {[vars]tst_path}/integration/test_redis_relation.py -vv --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
