--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,7 +44,7 @@ resources:
   redis-image:
     type: oci-image
     description: ubuntu lts docker image for redis
-    upstream: dataplatformoci/redis:7.0-22.04_edge
+    upstream: ghcr.io/canonical/charmed-redis:7.0-22.04_edge
   cert-file:
     type: file
     filename: redis.crt
