--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
-          channel: 1.28-strict/stable
+          bootstrap-options: "--agent-version 2.9.43"
       - name: Run integration tests
         run: tox -e integration-charm
 
@@ -56,7 +56,7 @@ jobs:
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
-          channel: 1.28-strict/stable
+          bootstrap-options: "--agent-version 2.9.43"
       - name: Run integration tests
         run: tox -e integration-relation
 
@@ -73,7 +73,7 @@ jobs:
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
-          channel: 1.28-strict/stable
+          bootstrap-options: "--agent-version 2.9.43"
       - name: Run integration tests
         run: tox -e integration-relation -- --num-units 1
 
@@ -90,7 +90,7 @@ jobs:
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
-          channel: 1.28-strict/stable
+          bootstrap-options: "--agent-version 2.9.43"
       - name: Run integration tests
         run: tox -e integration-password
 
@@ -107,6 +107,6 @@ jobs:
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
-          channel: 1.28-strict/stable
+          bootstrap-options: "--agent-version 2.9.29"
       - name: Run integration tests
         run: tox -e integration-scaling
