--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ env_list = lint, unit
 
 [vars]
 src_path = {tox_root}/src/
-tests_path = {tox_root}/tests/
+tests_path = {tox_root}/tests
 lib_path = {tox_root}/lib/charms/redis_k8s
 all_path = {[vars]src_path} {[vars]tests_path} 
 
