fix posargs placement

--- a/tox.ini
+++ b/tox.ini
@@ -79,4 +79,4 @@ deps =
     lightkube==0.13.0
     -r {tox_root}/requirements.txt
 commands =
-    pytest -vv --tb native --log-cli-level=INFO -s {posargs} {[vars]tests_path}/integration/{env:TEST_FILE}
+    pytest -vv --tb native --log-cli-level=INFO {[vars]tests_path}/integration/{env:TEST_FILE} -s {posargs}
