fix single unit test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -122,7 +122,7 @@ jobs:
             echo "mark_expression=not unstable" >> $GITHUB_OUTPUT
           fi
       - name: Run integration tests
-        run: tox run -e integration-relation -- --num-units 1 -m '${{ steps.select-tests.outputs.mark_expression }}'
+        run: tox run -e integration-redis-relation -- --num-units 1 -m '${{ steps.select-tests.outputs.mark_expression }}'
         env:
           CI_PACKED_CHARMS: ${{ needs.build.outputs.charms }}
 
