--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 # This file is part of the Redis k8s Charm for Juju.
-# Copyright 2022 Canonical Ltd.
+# Copyright 2024 Canonical Ltd.
 # See LICENSE file for licensing details.
-
-ops~=2.3.0
-redis~=4.3.4
-jinja2==3.1.1
-tenacity==8.0.1
+ops==2.13.0
+redis==5.0.4
+jinja2==3.1.4
+tenacity==8.3.0
